# memoir

./: .clang-format  .enable.in  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  enable  make.err  make.out
compiler/: .gitignore  CMakeLists.txt  Makefile  README.md
compiler/folio/: Benefit.hpp  CMakeLists.txt  Candidate.hpp  CoalesceUses.hpp  Context.hpp  Mapping.hpp  NestedObject.hpp  ObjectInfo.hpp  ProxyInsertion.hpp  RedundantTranslations.hpp  Utilities.hpp  Version.hpp  WeakenUses.hpp
compiler/folio/analysis/: ConstraintInference.hpp  Constraints.def  Constraints.hpp  Content.hpp  ContentAnalysis.hpp  ContentSimplification.hpp  ContentVisitor.hpp  Opportunities.hpp  OpportunityDiscovery.hpp
compiler/folio/include/: Candidate.hpp  ObjectInfo.hpp  Proxy.hpp  ProxyInsertion.hpp  SelectionMonomorphization.hpp  Utilities.hpp  WeakenUses.hpp
compiler/folio/opportunities/: Analysis.hpp  BitmapOpportunity.hpp  Opportunities.def  Opportunities.hpp  Opportunity.hpp  ProxyOpportunity.hpp
compiler/folio/pass/: CMakeLists.txt  Pass.hpp
compiler/folio/passes/: Pass.hpp  Passes.hpp
compiler/folio/scripts/: CMakeLists.txt  folio  folio-load
compiler/folio/solver/: FormulaEnvironment.hpp  Implementation.hpp  Selection.hpp  Solver.hpp
compiler/folio/src/: #RedundantTranslations.cpp#  .#RedundantTranslations.cpp  Analysis.cpp  Benefit.cpp  Candidate.cpp  CoalesceUses.cpp  FolioPass.cpp  LambdaLifting.cpp  Mapping.cpp  MutateTypes.cpp  ObjectInfo.cpp  Optimize.cpp  PassRegistration.cpp  Prepare.cpp  ProxyInsertion.cpp  RedundantTranslations.cpp  Remarks.cpp  SelectionMonomorphization.cpp  Transform.cpp  Update.cpp  Utilities.cpp  WeakenUses.cpp
compiler/folio/transforms/: Candidate.hpp  CoalesceUses.hpp  Context.hpp  LambdaLifting.hpp  NestedObject.hpp  ObjectInfo.hpp  Proxy.hpp  ProxyInsertion.hpp  ProxyManager.hpp  Utilities.hpp  WeakenUses.hpp
compiler/memoir/: CMakeLists.txt  code_complexity.sh
compiler/memoir/analysis/: BoundsCheckAnalysis.hpp  CMakeLists.txt  DefUseChain.hpp  DependenceAnalysis.hpp  LiveRangeAnalysis.hpp  Liveness.hpp  RangeAnalysis.hpp  SizeAnalysis.hpp  ValueExpression.hpp  ValueNumbering.hpp
compiler/memoir/c/: CMakeLists.txt  mstring.h
compiler/memoir/c++/: CMakeLists.txt
compiler/memoir/impl/: CMakeLists.txt
compiler/memoir/ir/: Builder.hpp  CallGraph.hpp  ControlFlow.hpp  FunctionType.hpp  InstVisitor.hpp  Instructions.def  Instructions.hpp  Keywords.def  Keywords.hpp  MutOperations.def  MutOperations.hpp  Object.hpp  Properties.def  Properties.hpp  Property.hpp  TypeCheck.hpp  TypeVisitor.hpp  Types.hpp  Verifier.hpp
compiler/memoir/lower/: TypeLayout.hpp
compiler/memoir/lowering/: CollectionSelection.hpp  ImplLinker.hpp  Implementation.hpp  LowerFold.hpp  SSADestruction.hpp  TypeLayout.hpp
compiler/memoir/op/: CMakeLists.txt  memoir.c  types.h
compiler/memoir/passes/: CMakeLists.txt  LinkDeclarations.hpp  Passes.def  Passes.hpp
compiler/memoir/raise/: CMakeLists.txt  ExtendedSSAConstruction.hpp
compiler/memoir/raising/: Coerce.hpp  Defunctionalize.hpp  ExtendedSSAConstruction.hpp  LambdaLifting.hpp  RepairSSA.hpp  SSAConstruction.hpp  TypeInference.hpp
compiler/memoir/scripts/: memoir-clang  memoir-clang++  memoir-config.in  memoir-lower  memoir-norm
compiler/memoir/support/: Assert.hpp  AssocList.hpp  Casting.hpp  DataTypes.hpp  FetchAnalysis.hpp  Graph.hpp  InternalDatatypes.hpp  PassUtils.hpp  Print.hpp  SortedVector.hpp  TypeTraits.hpp  UnionFind.hpp  UniqueMultiMap.hpp  WorkList.hpp  graph_lite.h
compiler/memoir/transforms/: CMakeLists.txt
compiler/memoir/utility/: CFGUtils.hpp  CMakeLists.txt  FunctionNames.hpp  InstructionUtils.hpp  Metadata.def  Metadata.hpp  MetadataUtils.hpp
compiler/passes/: .gitignore  CMakeLists.txt  Makefile  code_complexity.sh
compiler/passes/collection_lowering/: CMakeLists.txt
compiler/passes/collection_selection/: CMakeLists.txt
compiler/passes/command_line/: CMakeLists.txt
compiler/passes/common/: CMakeLists.txt  README.md
compiler/passes/constant_propagation/: CMakeLists.txt
compiler/passes/dead_collection_elimination/: CMakeLists.txt
compiler/scripts/: CMakeLists.txt  buildNOELLE.sh  compile.sh  enable  links.sh  lower.sh  memoir-clang  memoir-clang++  memoir-config.in  memoir-env  memoir-load  memoir-lower  memoir-norm  memoir-norm-runtime  memoir-opt  memoir-prof  normalize.sh  normalize_runtime.sh  optimize.sh  run_me.sh
docs/: CMakeLists.txt  Doxyfile.in
memoir/: CMakeLists.txt  README.md  code_complexity.awk
memoir/analysis/: BoundsCheckAnalysis.hpp  LiveRangeAnalysis.hpp  RangeAnalysis.hpp  ValueExpression.hpp  ValueNumbering.hpp
memoir/c/: cmemoir.h
memoir/impl/: CMakeLists.txt
memoir/ir/: Builder.hpp  FunctionType.hpp  Instructions.hpp  Keywords.hpp  MutOperations.hpp  TypeCheck.hpp  TypeVisitor.hpp
memoir/lower/: ImplLinker.hpp  Implementation.hpp  SSADestruction.hpp
memoir/op/: CMakeLists.txt  memoir.c  memoir.def  memoir.h  types.def
memoir/passes/: Passes.def
memoir/raise/: RepairSSA.hpp
memoir/scripts/: memoir-enable  memoir-load  memoir-lower  memoir-norm-runtime  memoir-prof
memoir/support/: Assert.hpp  Concepts.hpp  DataTypes.hpp  FetchAnalysis.hpp  Graph.hpp  Print.hpp
memoir/utility/: CFGUtils.hpp  FunctionNames.hpp  InstructionUtils.hpp  Metadata.def  MetadataUtils.hpp
runtime/: CMakeLists.txt  Makefile  README.md  builder.cpp  builder.hpp  fields.cpp  objects.hpp  printer.cpp  types.hpp
runtime/backend/: CMakeLists.txt  utilities.h
runtime/include/: .memoir.h.swp  accessor.h  accessor.hpp  builder.h  builder.hpp  cmemoir.h  internal.h  memoir.h  object_ir.h  objects.h  objects.hpp  types.def  types.h  types.hpp  utils.h
runtime/src/: accessor.cpp  allocation.cpp  builder.cpp  collections.cpp  deletion.cpp  elements.cpp  fields.cpp  memoir.cpp  mut_access.cpp  mut_operations.cpp  mutable.cpp  objects.cpp  printer.cpp  ssa.cpp  ssa_access.cpp  ssa_operations.cpp  type.cpp  type_checking.cpp  type_factory.cpp  types.cpp
tests/unit/: .gitignore  CMakeLists.txt  Makefile  Makefile.template
(+1005 files in other folders)
