set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fPIC -g3 ")

# Configure subdirectories
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(memoir)
#add_subdirectory(object_abstraction)
#add_subdirectory(object_inlining)
#add_subdirectory(object_lowering)
#add_subdirectory(struct_of_arrays)
add_subdirectory(normalization)
# add_subdirectory(example)
# add_subdirectory(slice_canonicalization)
# add_subdirectory(slice_propagation)
# add_subdirectory(dead_collection_elimination)
# add_subdirectory(dead_field_elimination)
# add_subdirectory(field_elision)
# add_subdirectory(key_folding)
# add_subdirectory(collection_lowering)
# add_subdirectory(sequence_provisioning)
add_subdirectory(mut_to_immut)
add_subdirectory(ssa_destruction)
add_subdirectory(statistics)
add_subdirectory(command_line)
add_subdirectory(noelle_wrapper)
